--- a/react-app/src/components/Products/Products.css
+++ b/react-app/src/components/Products/Products.css
@@ -51,12 +51,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: stretch;
     flex-basis: calc(33.33% - 30px);
-    /* max-width: 300px; */
     width: calc(100% - 66.66%);
-    /* min-width: 300px; */
-    min-height: 350px;
-    /* height: 100%; */
+    height: 100%;
 }
 
 .product-img {
@@ -131,3 +129,4 @@
     background-color: transparent;
     border: none;
 }
+
