--- a/react-app/src/components/SearchModal/SearchModal.css
+++ b/react-app/src/components/SearchModal/SearchModal.css
@@ -29,7 +29,7 @@
     flex-wrap: wrap;
     gap: 20px;
     padding: 10px;
-    width: 85vw;
+    /* width: 85vw; */
     z-index: 9999;
     overflow-y: scroll;
 }
