--- a/react-app/src/components/SearchModal/SearchModal.css
+++ b/react-app/src/components/SearchModal/SearchModal.css
@@ -29,8 +29,8 @@
     flex-wrap: wrap;
     gap: 20px;
     padding: 10px;
-    /* width: 85vw; */
-    z-index: 99999;
+    width: 80vw;
+    z-index: 9999;
     overflow-y: scroll;
 }
 
